--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lkiversonlk/Aflodit-crawler#readme",
   "dependencies": {
+    "easyimage": "^2.1.0",
     "mongoose": "^4.4.10",
     "node-uuid": "^1.4.7"
   }
